azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualMachineSize": {
      "type": "string",
      "defaultValue": "Standard_B2s",
      "allowedValues":[
        "Standard_A1_v2",
        "Standard_A2_v2",
        "Standard_A4_v2",
        "Standard_B1s",
        "Standard_B1ms",
        "Standard_B2s",
        "Standard_B2ms",
        "Standard_B4ms",
        "Standard_F1s",
        "Standard_F2s",
        "Standard_F4s",
        "Standard_DS1_v2"
      ],
      "metadata": {
        "description": "VM size, please choose a size which allow 2 NICs."
      }
    },
    "virtualMachineName": {
      "type": "string",
      "metadata": {
        "description": "PFSense NVA Manchine Name"
      }
    },
    "ImageID": {
      "type": "string",
      "metadata": {
        "description": "ResourceID of your image"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Default Admin username"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Default Admin password"
      }
    },
   "virtualNetworkName": {
    "type": "string",
    "defaultValue": "PFSense-VNET",
    "metadata": {
      "description": "Virtual Nework Name"
      }
   },
    "VNETAddress": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
      "description": "Virtual Address Space"
        }
    },
    "Subnet1Address": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
      "description": "Untrusted-Subnet Address Space"
        }
    },
    "Subnet2Address": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
      "description": "Trusted-Subnet Address Space"
        }
    }
  },
  "variables": {
    "nic1": "Untrusted",
    "nic2": "Trusted",
    "subnet1Name": "Untrusted-Subnet",
    "subnet2Name": "Trusted-Subnet",
    "publicIPAddressName": "[concat(parameters('virtualMachineName'),'-PublicIP')]",
    "subnet1Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), variables('subnet1Name'))]",
    "subnet2Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), variables('subnet2Name'))]",
    "networkSecurityGroupName": "PFSense-NSG",
    "location": "[resourceGroup().location]"
  },
  "resources": [
    {
      "name": "[parameters('virtualMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2018-06-01",
      "location": "[variables('location')]",
      "comments": "This is the virtual machine that you're building.",
      "dependsOn": [
        "[variables('nic1')]",
        "[variables('nic2')]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "[parameters('virtualMachineName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
              "createOption": "fromImage",
              "managedDisk": {
                  "storageAccountType": "StandardSSD_LRS"
              }
          },
          "imageReference": {
              "id": "[parameters('ImageID')]"
          }
      },
        "networkProfile": {
          "networkInterfaces": [
            {
              "properties": {
                "primary": true
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic1'))]"
            },
            {
              "properties": {
                "primary": false
              },
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic2'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "apiVersion": "2018-04-01",
      "location": "[variables('location')]",
      "comments": "This will build a Virtual Network.",
      "dependsOn": [
        "[variables('networkSecurityGroupName')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('VNETAddress')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet1Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet1Address')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "[variables('subnet2Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet2Address')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('nic1')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "comments": "This will be your Primary NIC",
      "dependsOn": [
        "[variables('publicIpAddressName')]",
        "[variables('networkSecurityGroupName')]",
        "[parameters('virtualNetworkName')]"
      ],
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnet1Ref')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "[variables('nic2')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "comments": "This will be your Secondary NIC",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
      ],
      "properties": {
        "enableIPForwarding": true,
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[variables('subnet2Ref')]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('publicIpAddressName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2017-06-01",
      "location": "[variables('location')]",
      "comments": "Public IP for your Primary NIC",
      "properties": {
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2016-09-01",
      "location": "[variables('location')]",
      "comments": "Network Security Group (NSG) for your Primary NIC",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-https",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-ssh",
            "properties": {
            "priority": 1001,
            "sourceAddressPrefix": "*",
            "protocol": "Tcp",
            "destinationPortRange": "22",
            "access": "Allow",
            "direction": "Inbound",
            "sourcePortRange": "*",
            "destinationAddressPrefix": "*"
              }  
          }
        ]
      }
    }
  ],
  "outputs": {}
}
